# secrets-manager

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
scripts/: set_cargo_version.py
src/: config.rs  crypto.rs  lib.rs  main.rs  model.rs  store.rs
