[package]
name = "secrets-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
zeroize = "1.7"

[dev-dependencies]
tempfile = "3.10"
