[package]
name = "secrets-manager"
version = "1.4.0"
edition = "2021"
description = "Minimal encrypted secrets manager CLI (GPG-backed)"

[package.metadata.deb]
maintainer = "Unknown <unknown@example.com>"
copyright = ""
license-file = ["LICENSE", "0"]
extended-description = "A minimal secrets manager CLI that stores key/value entries encrypted at rest using your local GnuPG keyring."
depends = "gnupg"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/secrets-manager",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/secrets-manager/README.md",
        "644",
    ],
]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
